# django-managerie

./: .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  manage.py  mypy.ini  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
django_managerie/: __init__.py  blacklist.py  blocklist.py  commands.py  compat.py  forms.py  managerie.py  types.py  views.py
django_managerie/templates/django_managerie/admin/: command.html  list.html
managerie_test_app/: admin.py  apps.py  models.py  settings.py  urls.py  wsgi.py
managerie_test_app/management/commands/: mg_disabled_command.py  mg_stdin_command.py  mg_test_command.py  mg_unprivileged_command.py
managerie_test_app/migrations/: 0001_initial.py
managerie_tests/: conftest.py  settings.py  test_managerie.py
