[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-managerie"
dynamic = ["version"]
description = "Expose Django management commands in the admin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Django>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest-django~=4.10",
    "pytest>=7.2",
]

[project.urls]
Homepage = "https://github.com/akx/django-managerie"

[tool.hatch.version]
path = "django_managerie/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/django_managerie",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "managerie_test_app.settings"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "COM",
    "C9",
    "E",
    "F",
    "I",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 10
