[metadata]
name = django-managerie
version = attr:django_managerie.__version__
author = Aarni Koskela
author_email = akx@iki.fi
description = Expose Django management commands in the admin
license = MIT
url = https://github.com/akx/django-managerie
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
python_requires = '>=3.6'
install_requires =
    Django>=2.2
    wrapt
packages = find:
zip_safe = False

[options.packages.find]
include =
    django_managerie
    django_managerie*

[flake8]
max-line-length = 120
max-complexity = 10

[tool:pytest]
DJANGO_SETTINGS_MODULE = managerie_test_app.settings
